--- a/portfolio/project.html
+++ b/portfolio/project.html
@@ -30,6 +30,7 @@
                 <div id = "link">
                 <!-- <button id= "bt"> <a href="C:\Zero to Mastery\Web_application\BasicProject1\NewProfiolio - edited\Calculator\index1.html">calculator</a> </button> -->
                 <button id= "bt"> <a href="https://ibazeez.github.io/calculator/calcu/index1.html">calculator</a> </button>
+                <button id= "bt" style="background-color: green;"> <a href="https://github.com/ibrahim5354">github</a> </button>
                  </div>
        
        
